Modified latex still have to do spelling

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,4 +1,12 @@
-GCC=gcc
+TMPGCC=gcc
+#if we wanted to cross compile to rpi we would use the toolchain we have downloaded for the kernel compilation : arm-linux-gnueabi-gcc, but to use it we would have to specify a path. In our case we have exported the path to the folder in the vaiable CROSS_COMPILE
+ifeq (${CROSS_COMPILE},'')
+echo "CROSS_COMPILE is not set";
+GCC=${TMPGCC}
+else
+#to avoid recursice refrencing to GCC variable
+GCC=${CROSS_COMPILE}${TMPGCC}
+endif
 ADD=minmax
 DEPS=minmax${HEADER_SUFFIX}
 all: main
