sysfs is compiling

--- a/Lab5/CMakeLists.txt
+++ b/Lab5/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Lab5)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
-set(SOURCE_FILES gpio_blink.c)
+set(SOURCE_FILES gpio_blink.c gpio_blink_sysfs.c)
 add_executable(Lab5 ${SOURCE_FILES})
